opam-version: "2.0"
version: "0.2.1"
maintainer: "vadim@radovel.ru"
authors: ["Vadim Radovel <vadim@radovel.ru>"]
homepage: "https://github.com/nightblues/ppx_logs"
bug-reports: "https://github.com/nightblues/ppx_logs/issues"
dev-repo: "git+https://github.com/nightblues/ppx_logs.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs "@runtest" {with-test}]
]
depends: [
  "ocaml" {>= "4.05.0"}
  "dune"   {build & >= "1.5.1"}
  "ppxlib" {>= "0.8.0"}
  "logs" {>= "0.6.3"}
  "ppx_expect" {>= "v0.12.0" & with-test}
]
synopsis: "Add code location to logs"
description: "
A ppx that adds source code location to your Logs calls.
"
